--- a/grid.css
+++ b/grid.css
@@ -5,11 +5,11 @@ html, body{
 }
 @font-face {
     font-family: "simpsons";
-    src: url(Simpsonfont\ DEMO.otf);
+    src: url(fonts/Simpsonfont\ DEMO.otf);
 }
 @font-face {
     font-family: "text";
-    src: url(NotoSansDisplay-VariableFont_wdth\,wght.ttf);
+    src: url(fonts/NotoSansDisplay-VariableFont_wdth\,wght.ttf);
 }
 p{
     font-family:"text";
@@ -62,21 +62,31 @@ h1,h2, h3, h4, h5, h6{
   }
 #banner {
     grid-area: banner;
-    background-image: url("simpson\ banner.png");
+    background-image: url("photos/simpson\ banner.png");
     background-size: cover;
     background-position: center;
     height: 200px;
     border-top: 5px solid #000000;
     border-bottom: 5px solid #000000;
-
+}
+#springfield_banner {
+    grid-area: banner;
+    background-image: url("photos/Springfield.webp");
+    background-size: cover;
+    background-position: center;
+    height: 200px;
+    border-top: 5px solid #000000;
+    border-bottom: 5px solid #000000;
 }
 #main {
     display: flex;
     width: 100%;
     justify-content: center;
 }
-#content {
+#content1 {
     grid-area: content;
+    display: flex;
+    flex-direction: column;
     text-align: left;
     color: #ffffff;
     margin-top: 1em;
@@ -87,12 +97,36 @@ h1,h2, h3, h4, h5, h6{
     border-radius: 12px;
     max-width:1000px;
 }
+#content2 {
+    grid-area: content;
+    margin-top: 6em;
+    margin-left:1em;
+    margin-right:1em;
+    background-color: #ffffff;
+    color: #000000;
+    border-radius: 12px;
+    
+}
+.image_text{
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    text-align: center; 
+}
+#content2_flex{
+    display: flex;
+    flex-direction: row;
+    
+}
+#content2 a{
+margin:50px;
+}
 
-#content p{
+#content1 p{
  margin-left:2em;
  margin-right:2em;
 }
-#content hr{
+#content1 hr{
     width: 90%;
 }
 
@@ -121,7 +155,9 @@ h1,h2, h3, h4, h5, h6{
 
 @media only screen and (min-width: 750px){
     #banner {
-        grid-area: banner;
+        height: 320px;
+    }
+    #springfield_banner {
         height: 320px;
     }
 }
