--- a/forum.css
+++ b/forum.css
@@ -184,7 +184,57 @@ margin-right: 50px;
 .personal_info{
     background-color: #ffffff;
 }
+#send {
+    margin-top: 20px;
+    width: 130px;
+    height: 30px;
+    display: block;
+    position: absolute;
+    left: 3em;
+}
+#messages hr {
+    border: none;
+    border-top: 1px solid black;
+}
+#messages{
+    margin-top:70px;
+    margin-left: 40px;
+    font-family:"text";
+}
+dialog {
+    width: 400px;
+    height: 340px;
+}
 
+#name_input {
+    width:345px;
+}
+#title_input {
+    width:357px;
+}
+#input_message{
+    width: 100%;
+    height: 200px;
+}
+dialog button{
+    float: right;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+#Cancel{
+    width:100px;
+    height: 24px;
+}
+#Cancel:hover{
+    background-color: rgb(255, 58, 58);
+}
+#Send{
+    width:100px;
+    height: 24px;
+}
+#Send:hover{
+    background-color: rgb(61, 252, 61);
+}
 @media only screen and (min-width: 750px){
     #banner {
         height: 320px;
